ircv3_parse_derive/tests/ui/de/fail/duplicate_with.stderr
error: duplicate `with` attribute
 --> tests/ui/de/fail/duplicate_with.rs:6:11
  |
6 |     #[irc(with = "fn2")]
  |           ^^^^^^^^^^^^

error: first `with` defined here
 --> tests/ui/de/fail/duplicate_with.rs:5:24
  |
5 |     #[irc(tag = "key", with = "fn1")]
  |                        ^^^^
